# pm

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  docker-compose.yml
backend/: AGENTS.md  Dockerfile  ai.py  auth.py  board.py  database.py  main.py  models.py  pyproject.toml
backend/app/: ai.py  auth.py  board.py  database.py  main.py
backend/tests/: test_api.py
docs/: FIX_PLAN.md  MARKET_DATA_DESIGN.md  PLAN.md  database-schema.json  fftc_prompt.md
frontend/: AGENTS.md
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: AISidebar.tsx  CardDetailModal.test.tsx  CardDetailModal.tsx  ChatSidebar.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  LoginForm.test.tsx  LoginForm.tsx  ProjectBoard.tsx  ProjectWizard.tsx
frontend/src/lib/: api.ts  chatEngine.ts  kanban.ts  renderMessage.tsx  sampleProject.ts  storage.ts
scripts/: AGENTS.md  deploy-azure.sh  redeploy-azure.sh  start.bat  start.sh  stop.bat  stop.sh  teardown-azure.sh
