[project]
name = "kanban-studio-backend"
version = "0.1.0"
description = "Kanban Studio API backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "anthropic",
    "python-multipart",
    "pymupdf",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = ["pytest", "httpx"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
